Read.me updated

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -595,7 +595,9 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The logistic regression model predicted a balanced accuracy score of 95% for the healthy loans and high-risk loan labels\n"
+    "**Answer:** The logistic regression model predicted a balanced accuracy score of 95% for the healthy loans and high-risk loan labels\n",
+    "\n",
+    "(0.99+0.91/2)= 0.95\n"
    ]
   },
   {
